nginx-color.yaml
# 这是一个关于nginx的测试配置
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment-${COLOR}
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-${COLOR}
      color: ${COLOR}
  template:
    metadata:
      labels:
        app: nginx-${COLOR}
        version: "${VERSION}"
    spec:
      containers:
        - name: nginx-${COLOR}
          image: nginx:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-config-volume
              mountPath: /etc/nginx/conf.d
            - name: nginx-html-volume
              mountPath: /usr/share/nginx/html
      volumes:
        - name: nginx-config-volume
          configMap:
            name: nginx-config-${COLOR}
            items:
              - key: default.conf
                path: default.conf
        - name: nginx-html-volume
          configMap:
            name: nginx-config-${COLOR}
            items:
              - key: index.html
                path: index.html
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-${COLOR}
  namespace: default
spec:
  selector:
    app: nginx-${COLOR}
    color: ${COLOR}
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress-${COLOR}
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: nginx-${COLOR}.my.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service-${COLOR}
                port:
                  number: 80
